# svg_to_dxf

./: .gitignore  CONTRIBUTING.md  LICENSE  PLUGIN_REQUIREMENTS.md  README.md  app.py  pyproject.toml  requirements-dev.txt  requirements-plugins.txt  requirements.txt
svg_to_dxf_app/: __init__.py  workers.py
svg_to_dxf_app/conversion/: __init__.py  base.py  svg_to_dxf.py
svg_to_dxf_app/gui/: main_window.py  viewers.py
svg_to_dxf_app/plugins/: __init__.py  base.py  manager.py  manifest.json  svg_to_dxf_plugin.py
tests/: test_converter.py  test_worker.py
